# verify-or-trust

./: .gitignore  .zenodo.json  CARD.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  SCHEMA.md  SECURITY.md  SUPPORT.md  artifact_manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: ci.yml
data/: README.md
data/substrates/: gears_norman.csv
docs/: ARCHIVAL_RELEASE.md
examples/: quickstart.py
results/: RESULTS.md
schemas/: artifact_manifest.schema.json  episode.schema.json  panel.schema.json  substrate_row.schema.json
scripts/: competence_signal.py  make_figures.py  validate_public_release.py
src/verify_or_trust/: __init__.py  baselines.py  cli.py  env.py  grade.py  panels.py  tools.py
src/verify_or_trust/substrates/: __init__.py  gears_norman.py  state_tahoe.py
tests/: conftest.py  test_baselines.py  test_env.py  test_grade.py  test_panels.py  test_skeleton.py
